--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,9 @@ input {
     border: none;
 }
 
-img {
-    /* min-width: 100%; */
-}
+/* img {
+    min-width: 100%;
+} */
 
 button {
     margin: 0;
@@ -90,9 +90,9 @@ body {
     max-width: 1170px;
     padding: 0;
     margin: 0 auto;
-    border: 1px solid green;
+    /* border: 1px solid green; */
 }
-
+/* ---Header--- */
 .header {
     /* height: 115px; */
     /* padding-top: 37px; */
@@ -120,6 +120,7 @@ body {
 
 .header-nav__list {
     display: flex;
+    align-items: center;
     padding-right: 5px;
     font-size: 12px;
 }
@@ -130,8 +131,8 @@ body {
 
 .header-nav__item:not(:last-child) {
     /* border-right: 1px solid white; */
-    margin-right: 20px;
-    padding-right: 20px;
+    /* margin-right: 20px; */
+    padding-right: 10px;
 }
 
 .header-nav__link {
@@ -139,11 +140,11 @@ body {
 }
 
 .header-hr {
-    margin: 0;
-    padding: 0;
+    margin-right: 10px;
     width: 10px;
     color: var(--light);
     transform: rotate(90deg);
+    /* border: none */
 }
 
 .header-search {
@@ -203,15 +204,38 @@ body {
     font-size: 14px;
     padding-right: 12px;
 }
-/* .header__form__btn{
-    background-image: url("../img/Header/searchBtn.png");
-    background-position: center center;
-    background-repeat: no-repeat;
+/* ---Header--- */
+
+/* ---Navbar--- */
+.nav {
+    background-color: var(--accent-color);
 }
 
-.header__right__nav__list {
+.nav-container {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* height: 51px; */
+    padding: 20px 66px 15px 0;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: var(--light);
 }
-.header__right__nav__item:not(:last-child) {
-    margin-right: 20px;
-} */
+
+.toggle {
+    padding-left: 25px;
+}
+
+.toggle::before {
+    padding-right: 13px;
+    content: url("../img/Navbar/toggle.png");
+    color: var(--light);
+}
+
+.nav__list {
+    display: flex;
+    align-items: center;
+}
+.nav__item:not(:last-child) {
+    margin-right: 44px;
+}
