--- a/css/style.css
+++ b/css/style.css
@@ -334,16 +334,6 @@ body {
     grid-template-columns: repeat(1, 1fr);
     gap: var(--grid-gap);
 }
-.sidebar__btn {
-    color: var(--light);
-    font-size: 16px;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 18px 25px;
-    padding-bottom: 16px;
-    border-radius: 23px;
-}
-
 .article-block {
     grid-column: 3 span;
 }
@@ -412,8 +402,12 @@ body {
 .post__descr p {
     margin-bottom: 10px;
 }
+.post:hover {
+    box-shadow: 4px 8px 40px rgba(8, 24, 111, 0.2);
+    transition: box-shadow 0.3s ease-in-out;
+}
 
-.post1, .post4, .post5 {
+.post1, .post4, .post5, .post6 {
     grid-column: 2 span;
 }
 .post5 {
@@ -435,8 +429,30 @@ body {
     text-transform: uppercase;
     margin-bottom: 23px;
 }
+.post6 {
+    margin-bottom: 60px;
+}
+.post6 .post__content {
+    flex-wrap: wrap;
+    padding-top: 10px;
+}
+.post6 .item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 45px;
+}
+.post6 .post__img {
+    margin: 0;
+    margin-right: 30px;
+}
+.post6 .post__descr {
+    align-items: start;
+}
 
-
+.sidebar .post__content {
+    justify-content: center;
+}
 .subscribe p {
     font-size: 15px;
     margin-bottom: 20px;
@@ -463,4 +479,31 @@ body {
     padding-bottom: 16px;
     border-radius: 20px;
 }
+.sidebar .ads {
+    transition:background 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+.sidebar .ads a {
+    width: 100%;
+    height: 100%;
+}
+.sidebar .ads:hover {
+    background: #fff;
+    box-shadow: 4px 8px 40px rgba(8, 24, 111, 0.2);
+}
 /* ---Content--- */
+
+/* ---Brands--- */
+.brand {
+    background-color: var(--accent-color);
+}
+.brand__container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;    
+    padding: 40px 0;
+}
+.brand img {
+    mix-blend-mode: screen;
+}
+
+
